# saq

./: .gitignore  CLAUDE.md  LICENSE  README.md  idea.md  original_task.txt  pyproject.toml
artifacts/models/: calibrator.json  lgbm.txt
src/qorgauvoice/: __init__.py  build_features.py  inference.py  train.py
src/qorgauvoice/api/: __init__.py  server.py
src/qorgauvoice/config/: __init__.py  app.py
src/qorgauvoice/demo/: app.py
src/qorgauvoice/eval/: __init__.py  metrics.py
src/qorgauvoice/explain/: __init__.py  visualize.py
src/qorgauvoice/features/: backbone.py  embed.py  extract.py
src/qorgauvoice/models/: lgbm.py  registry.py
src/qorgauvoice/testing/: __init__.py  fakes.py
src/saq/: __init__.py  build_features.py  contracts.py  inference.py  train.py
src/saq/api/: schemas.py  server.py
src/saq/config/: __init__.py  app.py  seeding.py
src/saq/demo/: __init__.py  app.py
src/saq/eval/: __init__.py
src/saq/explain/: reasons.py  visualize.py
src/saq/features/: __init__.py  backbone.py  embed.py  extract.py
src/saq/models/: __init__.py  lgbm.py  registry.py
src/saq/testing/: __init__.py  fakes.py
tests/smoke/: test_backbone.py
tests/unit/: test_api_schemas.py  test_inference.py
tests/unit/eval/: test_metrics.py
tests/unit/features/: test_cache_key.py
tests/unit/models/: test_lgbm.py
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Analyzer.module.css  Analyzer.tsx  Button.module.css  Button.tsx  Footer.module.css  (+9 more)
(+29 files in other folders)
