[project]
name = "saq"
version = "0.1.0"
description = "Bilingual (Kazakh/Russian) audio anti-spoofing detector"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch",
    "torchaudio",
    "transformers>=4.40",
    "datasets",
    "soundfile",
    "librosa",
    "audiomentations",
    "lightgbm",
    "scikit-learn",
    "shap",
    "gradio>=5",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic>=2",
    "pydantic-settings",
    "omegaconf",
    "num2words",
    "gtts",
    "edge-tts",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
